; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/misc/extr_cytherm.c_cytherm_disconnect.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/misc/extr_cytherm.c_cytherm_disconnect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_interface = type { i32 }
%struct.usb_cytherm = type { i32 }

@dev_attr_brightness = common dso_local global i32 0, align 4
@dev_attr_temp = common dso_local global i32 0, align 4
@dev_attr_button = common dso_local global i32 0, align 4
@dev_attr_port0 = common dso_local global i32 0, align 4
@dev_attr_port1 = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [38 x i8] c"Cypress thermometer now disconnected\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.usb_interface*)* @cytherm_disconnect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cytherm_disconnect(%struct.usb_interface* %0) #0 {
  %2 = alloca %struct.usb_interface*, align 8
  %3 = alloca %struct.usb_cytherm*, align 8
  store %struct.usb_interface* %0, %struct.usb_interface** %2, align 8
  %4 = load %struct.usb_interface*, %struct.usb_interface** %2, align 8
  %5 = call %struct.usb_cytherm* @usb_get_intfdata(%struct.usb_interface* %4)
  store %struct.usb_cytherm* %5, %struct.usb_cytherm** %3, align 8
  %6 = load %struct.usb_interface*, %struct.usb_interface** %2, align 8
  %7 = getelementptr inbounds %struct.usb_interface, %struct.usb_interface* %6, i32 0, i32 0
  %8 = call i32 @device_remove_file(i32* %7, i32* @dev_attr_brightness)
  %9 = load %struct.usb_interface*, %struct.usb_interface** %2, align 8
  %10 = getelementptr inbounds %struct.usb_interface, %struct.usb_interface* %9, i32 0, i32 0
  %11 = call i32 @device_remove_file(i32* %10, i32* @dev_attr_temp)
  %12 = load %struct.usb_interface*, %struct.usb_interface** %2, align 8
  %13 = getelementptr inbounds %struct.usb_interface, %struct.usb_interface* %12, i32 0, i32 0
  %14 = call i32 @device_remove_file(i32* %13, i32* @dev_attr_button)
  %15 = load %struct.usb_interface*, %struct.usb_interface** %2, align 8
  %16 = getelementptr inbounds %struct.usb_interface, %struct.usb_interface* %15, i32 0, i32 0
  %17 = call i32 @device_remove_file(i32* %16, i32* @dev_attr_port0)
  %18 = load %struct.usb_interface*, %struct.usb_interface** %2, align 8
  %19 = getelementptr inbounds %struct.usb_interface, %struct.usb_interface* %18, i32 0, i32 0
  %20 = call i32 @device_remove_file(i32* %19, i32* @dev_attr_port1)
  %21 = load %struct.usb_interface*, %struct.usb_interface** %2, align 8
  %22 = call i32 @usb_set_intfdata(%struct.usb_interface* %21, i32* null)
  %23 = load %struct.usb_cytherm*, %struct.usb_cytherm** %3, align 8
  %24 = getelementptr inbounds %struct.usb_cytherm, %struct.usb_cytherm* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i32 @usb_put_dev(i32 %25)
  %27 = load %struct.usb_cytherm*, %struct.usb_cytherm** %3, align 8
  %28 = call i32 @kfree(%struct.usb_cytherm* %27)
  %29 = load %struct.usb_interface*, %struct.usb_interface** %2, align 8
  %30 = getelementptr inbounds %struct.usb_interface, %struct.usb_interface* %29, i32 0, i32 0
  %31 = call i32 @dev_info(i32* %30, i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0))
  ret void
}

declare dso_local %struct.usb_cytherm* @usb_get_intfdata(%struct.usb_interface*) #1

declare dso_local i32 @device_remove_file(i32*, i32*) #1

declare dso_local i32 @usb_set_intfdata(%struct.usb_interface*, i32*) #1

declare dso_local i32 @usb_put_dev(i32) #1

declare dso_local i32 @kfree(%struct.usb_cytherm*) #1

declare dso_local i32 @dev_info(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
